--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -1,11 +1,12 @@
 <!--Tirth-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>small bazaar - oer placed successfully</title>
 </head>
 <body>
-Order placed successfully
+<span th:text="${product}" >
+</span> Order placed successfully
 </body>
 </html>
