--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -8,7 +8,8 @@
 <main>
     <form action="/order" method="post" th:each="obj:${product}">
         <span th:text="${obj.productid}"></span>
-        <input name="tbd" value="1" type="number" min="0" max="10" placeholder="quantity">
+        <input name="qty" value="1" type="number" min="0" max="10" placeholder="quantity">
+        <input name="product" type="text" hidden>
         <span th:text="${obj.price}" class=""></span>
         <input type="submit" value="place order">
     </form>
