--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -6,7 +6,6 @@
     <title>small bazaar - oer placed successfully</title>
 </head>
 <body>
-<span th:text="${product}" >
-</span> Order placed successfully
+<span th:text="${product}" ></span> Order placed successfully
 </body>
 </html>
